# recipe-recommendation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SolutionArchitechture.md  description.md  docker-compose.yaml  pyproject.toml
src/whats_for_dinner/: app.py  constants.py  custom_components.py  rag_pipeline.py  startup.py
